add auth header and add swagger
