# docs/swagger.json
@@ -13,6 +13,11 @@
     "paths": {
         "/finances": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get finances",
                 "produces": [
                     "application/json"
@@ -29,6 +34,12 @@
                             "items": {
                                 "$ref": "#/definitions/handlers.OutputGetFinances"
                             }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
                         }
                     },
                     "500": {
@@ -66,6 +77,13 @@
                     "type": "integer"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
